# 100-Days-Of-Coding

./: .gitignore
.github/workflows/: rust.yml
python/: pyproject.toml
python/Week-01/Day-01_Convert-Ages-To-Days/: test_calc_age.py  week1_day1.py
python/Week-01/Day-02_Finding-Nemo/: test_find_nemo.py  week1_day2.py
python/Week-01/Day-03_Barbecue-Skewers/: test_barbecue_skewers.py  week1_day3.py
python/Week-01/Day-04_Is-Johnny-Making-Progress/: test_progress_days.py  week1_day4.py
python/Week-01/Day-05_Pair-Of-Socks/: test_sock_pairs.py  week1_day5.py
python/Week-01/Day-06_Next-Prime/: test_next_prime.py  week1_day6.py
python/Week-01/Day-07_Merge-Sorted-Array/: test_merge_sorted_array.py  week1_day7.py
python/Week-02/Day-08_Letter-Combinations-Of-A-Phone-Number/: test_digits_to_letter_combinations.py  week2_day8.py
python/Week-02/Day-13_Need-Help-With-Packing/: test_can_fit.py  week2_day13.py
python/Week-02/Day-14_Karacas-Encryption-Algorithm/: test_encrypt_karacas.py  week2_day14.py
python/Week-11/Day-74_CATTLEMETER/: README.md
python/Week-13/Day-90_Radio-Station/: README.md
python/Week-14/Day-98_Geography-Of-Brazil/: test_get_municipalities_count.py  week14_day98.py
rust/Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days/: Cargo.toml
rust/Week-11/Day-74_CATTLEMETER/: README.md
rust/Week-13/Day-90_Radio-Station/: README.md
rust/Week-14/Day-98_Geography-Of-Brazil/geography-of-brazil/: Cargo.toml
rust/Week-14/Day-98_Geography-Of-Brazil/geography-of-brazil/src/: main.rs  models.rs
(+21 files in other folders)
